alterando nome da iniciação da aplicação

--- a/ContentWeb/package.json
+++ b/ContentWeb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto-acquatec",
+  "name": "projeto-cacaucontrol",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
